--- a/style.css
+++ b/style.css
@@ -1,6 +1,22 @@
+* {
+    box-sizing: border-box;
+}
+
+
 body {
     background-color: #34495e;
     color:#fff;
+    font-family: Arial, Helvetica, sans-serif;
+    display:flex;
+    flex-direction: column;
+    align-items: center;
+    height: 80vh;
+    margin: 0;
+    overflow: hidden;
+}
+
+h1 {
+    margin: 20px 0 0;
 }
 
 .figure-container {
