Created wrong letter container and added text

--- a/style.css
+++ b/style.css
@@ -37,3 +37,9 @@ h1 {
 .figure-part {
     display:none;
 }
+
+.wrong-letters-container {
+    position: absolute;
+    top: 20px;
+    right: 20px;
+}
